css/style.css
/* common */
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: 'Montserrat', sans-serif;
}
/* /common */
.wrapper {
    width: 100%;
    height: 100vh;
}
/* main */
main {
    display: flex;
    height: calc(100vh - 100px);
}

/* aside */
aside {
    width: 200px;
    background-color: black;
    color: #6D6D6D;
    display: flex;
    flex-direction: column;
    overflow-y: hidden;
}

/* logo */
.logo {
    margin: 10px;
}
#logo {
    width: 90%;
}
#small-logo {
    display: none;
}

/* nav-bar */
.nav-bar {
    flex-shrink: 1;
    margin: 10px;
    color: #6D6D6D;
}
.nav-bar img {
    height: 30px;
    color: #6D6D6D;
}

.text {
    display: inline-block;
    line-height: 30px;
    vertical-align: top;
    font-size: 16px;
    font-weight: bold
}
.nav-home .text {
    color: white;
}

.text:hover,
.scrollmenu a:hover,
#playlist:hover .create_new {
    cursor: pointer;
    color: white;
}

/* playlist */
#playlist {
    margin: 10px;
    flex-shrink: 1;
}

#playlist h2 {
    font-size: 18px;
    color: white;
    text-transform: uppercase;
    font-weight: bold;
}

.scrollmenu {
    flex-grow: 1;
    flex-shrink: 1;
    overflow: auto;
    white-space: nowrap;
    padding-left: 10px;
}

.scrollmenu a {
    display: block;
    padding: 10px 0;
    font-size: 14px;
    font-weight: bold;
    text-decoration: none;
    color: #6D6D6D;
}

#playlist .create_new {
    font-size: 16px;
    margin: 10px 0;
    font-weight: bold;
}

#playlist span {
    display: inline-flex;
    justify-content: center;
    align-items: center;
    width: 40px;
    height: 40px;
    background-color: #6D6D6D;
}
#playlist:hover span {
    background-color: white;
}

#playlist i {
    color: black;
    font-size: 20px;
}

/* profile */
#profile {
    background-color: black;
    height: 80px;
    width: 100%;
    padding: 0 10px;
}

.download-app img {
    height: 15px;
    vertical-align: -webkit-baseline-middle;
}

.download-app .text {
    font-size: 14px;
}

.log-in img {
    height: 25px;
    color: #6D6D6D;
    background-color: #6D6D6D;
    border-radius: 50%;
    padding: 0 2px;
}

.log-in .text {
    color: white;
}

.download-app::after {
    content: "";
    display: block;
    width: 100%;
    height: 1px;
    margin-bottom: 10px;
    border-bottom: 1px solid #6D6D6D;
    background-color: #6D6D6D;
}

/* section */
#section {
    width: calc(100% - 200px);
    color: white;
    background-color: #141922;
    overflow: auto;
}
/* upgrade banner */
#upgrade {
    position: fixed;
    top: 0;
    right: 0;
    width: calc(100% - 200px);
    height: 100px;
    line-height: 100px;
    background-color: rgba(8, 11, 18, 0.5);
    text-align: right;
    z-index: 10;
}
#upgrade span {
    display: inline-block;
    padding: 10px 20px;
    margin-right: 30px;
    text-transform: uppercase;
    font-size: 16px;
    line-height: 20px;
    color: white;
    border: 1px solid white;
    border-radius: 20px;
}
#upgrade span:hover {
    cursor: pointer;
    transition: all 0.5s;
    transform: scale(1.1, 1.1);
}

/* nav-menu */
.list-inline {
    margin-top: 150px;
    list-style: none;
    text-align: center;
}

.list-inline li {
    display: inline-block;
    margin: 0 10px 20px 10px;
    line-height: 26px;
    font-size: 15px;
    text-transform: uppercase;
    font-weight: bold;
    color: #6D6D6D;
}
.list-inline li:first-child {
    position: relative;
}
.list-inline li:first-child::before {
    content : "";
    position: absolute;
    left    : 30px;
    bottom  : 0;
    height  : 1px;
    width   : 40%;  /* or 100px */
    border-bottom:2px solid #ADFF2F;
}
.list-inline li:hover {
    cursor: pointer;
    color: white;
}

/* recently played */
.clearfix::after {
    content: "";
    display: table;
    clear: both;
}
.section_title {
    padding-left: 20px;
    font-weight: bold;
    font-size: 26px;
}
.album {
    float: left;
    width: calc(100% / 6);
    min-height: 330px;
    padding: 20px 20px 10px 20px;
    text-align: center;
}

.portfolio_item {
    position: relative;
}
.portfolio_item img {
    width: 100%;
}
.portfolio_item i {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    opacity: 0;
    color: white;
    font-size: 48px;
}
.portfolio_item:hover {
    background-color: rgba(0, 0, 0, 0.8);
}
.portfolio_item:hover img {
    opacity: 0.5;
}
.portfolio_item:hover i {
    opacity: 1;
}

.subtitle_1 {
    margin: 10px 0;
    font-size: 16px;
    font-weight: bold;
}
.subtitle_2 {
    font-size: 12px;
    font-weight: bold;
    color: #6D6D6D;
}

/* create for */
#create-for .section_title,
#most-popular .section_title {
    margin: 20px 0;
}

#create-for .subtitle_2, 
#most-popular .subtitle_2 {
    padding-left: 20px;
}

#create-for .album {
    min-height: 200px;
}

/* most-popular */
#most-popular .album img {
    border-radius: 50%;
}
#most-popular .portfolio_item {
    border-radius: 50%;
}

/* footer */
footer {
    position: fixed;
    display: flex;
    justify-content: space-between;
    width: 100%;
    height: 100px;
    background-color: #282828;
    z-index: 20;
}
.song_name,
.song_volume {
    display: flex;
    width: 200px;
    height: 100%;
}

.song_minute {
    width: 40%;
    height: 100%;
}

/* song name start */
.song_name_left {
    display: flex;
    height: 100px;
    padding: 25px 10px;
}
.song_name_left img {
    height: 50px;
}

.song_name_center {
    display: flex;
    align-content: center;
    justify-content: center;
    flex-direction: column;
    flex-grow: 1;
    height: 100px;
}
.song_name_center span {
    color: #6D6D6D;
    font-weight: bold;
    font-size: 10px;
}
.song_name_center span:hover:not(span:first-child) {
    color: white;
    text-decoration: underline;
    cursor: pointer;
}
.song_name_center span:first-child {
    color: white;
    font-size: 16px;
}

.song_name_right {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    height: 100px;
}
.song_name_right i {
    margin: 0 6px;
    font-size: 15px;
    color: #6D6D6D;
}
.song_name_right i:hover {
    color: white;
    cursor: pointer;
}

/* song_minute */
.song_minute {
    display: flex;
    flex-direction: column;
    align-items: center;
}
.song_minute_buttons {
    display: flex;
    align-items: center;
    height: 50px;
}
.song_minute_buttons i {
    margin: 0 10px;
    color: white;
    font-size: 16px;
}
.song_minute_buttons i:hover {
    cursor: pointer;
}

.song_minute_buttons #play {
    font-size: 34px;
}
.song_minute_buttons #play:hover {
    transition: all 0.5s;
    transform: scale(1.1, 1.1);
}

.song_minute_bar {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 40px;
    width: 100%;
}
.song_minute_bar #volume {
    display: inline-block;
    position: relative;
    width: 70%;
    height: 5px;
    border-radius: 10px;
    background-color: grey;
    margin: 0 10px;
}
.minute_exact {
    display: inline-block;
    position: absolute;
    top: 0;
    left: 0;
    width: 40%;
    height: 5px;
    border-radius: 10px;
    background-color: lightgray;
}
#volume:hover .minute_exact,
#volume_small:hover .minute_exact {
    background-color: #1DB954;;
}
.volume_circle {
    display: inline-block;
    position: absolute;
    top: 0;
    left: 40%;
    transform: translateY(-5px);
    width: 15px;
    height: 15px;
    opacity: 0;
    border-radius: 50%;
    background-color: white;
}
#volume:hover .volume_circle,
#volume_small:hover .volume_circle {
    opacity: 1;
}

.song_minute_bar span {
    color: white;
    font-size: 10px;
}

/* song_volume  */
.song_volume {
    justify-content: center;
    align-items: center;
}
.song_volume i {
    color: white;
    font-size: 16px;
    margin: 0 10px;
}
.song_volume #volume_small {
    display: inline-block;
    position: relative;
    width: 70px;
    height: 5px;
    border-radius: 10px;
    background-color: grey;
}
/* media query */
@media all and (max-width:1200px) and (min-width:800px) {
    
    .album {
        width: calc(100% / 4);
    }

}

@media all and (max-width:799px) {

    .album {
        width: calc(100% / 2);
    }

    .song_name_right {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        height: 100px;
    }

    .song_name_right i {
        margin: 3px 10px;
        font-size: 15px;
        color: #6D6D6D;
    }

    .song_name_center {
        flex-grow: 0;
    }

    .song_volume #volume_small {
        width: 50px;
    }
    .song_volume i {
        margin: 0 5px;
    }

}

@media all and (max-width:600px) {
    
    aside {
        width: 60px;
    }

    #logo {
        display: none;
    }
    #small-logo {
        display: block;
        width: 80%;
        margin: 5px 10%;
    }
    .nav-bar {
        text-align: center;
        flex-grow: 1;
    }
    .nav-bar img {
        width: 80%;
        margin: 5px 0;
    }
    .text {
        display: none;
    }

    #playlist {
        display: none;
    }
    .scrollmenu {
        display: none;
    }

    #profile {
        text-align: center;
    }
    .download-app::after {
        display: none;
    }
    .download-app img {
        margin-bottom: 15px;
        height: 20px;
    }
    

    #section {
        width: calc(100% - 60px);
    }

    #upgrade {
        width: calc(100% - 60px);
        text-align: center;
    }

}

@media all and (max-height:600px) {
    
    #profile {
        display: none;
    }

}

@media all and (max-width:560px) {

    footer {
        justify-content: center;
    }

    .song_name {
        display: none;
    }

    .song_volume {
        display: none;
    }
    
    .song_minute {
        width: 70%;
    }

}

